--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="index.html">Explore</a>
+                    <a href="explore.html">Explore</a>
                 </li>
                 <li>
                     <a href="index.html">About Us</a>
@@ -133,7 +133,250 @@
     </header>
     <!-- main wrapper -->
     <main>
-
+        <section class="companies">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 p-2">
+                        <div class="sec_title">
+                            <h3>Recruitment Companies</h3>
+                            <a href="explore.html" class="view_all">View All </a>
+                        </div>
+                    </div>
+                    <div class="col-12 p-2">
+                        <div class="companies_grid">
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/no4.png" alt="">
+                                </div>
+                                <h6>Platinum</h6>
+                            </a>
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/no3.png" alt="">
+                                </div>
+                                <h6>Rawafed</h6>
+                            </a>
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/no5.png" alt="">
+                                </div>
+                                <h6>Aljwhara</h6>
+                            </a>
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/no6.png" alt="">
+                                </div>
+                                <h6>Nesma</h6>
+                            </a>
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/w2.png" alt="">
+                                </div>
+                                <h6>Taraf</h6>
+                            </a>
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/no4.png" alt="">
+                                </div>
+                                <h6>Platinum</h6>
+                            </a>
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/no3.png" alt="">
+                                </div>
+                                <h6>Rawafed</h6>
+                            </a>
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/no5.png" alt="">
+                                </div>
+                                <h6>Aljwhara</h6>
+                            </a>
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/no6.png" alt="">
+                                </div>
+                                <h6>Nesma</h6>
+                            </a>
+                            <a href="company-profile.html" class="company_card">
+                                <div class="img">
+                                    <img src="assets/images/w2.png" alt="">
+                                </div>
+                                <h6>Taraf</h6>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="categories_section">
+            <div class="container">
+                <div class="row m-0">
+                    <div class="col-12 p-2">
+                        <div class="sec_title">
+                            <h3>Jobs by Category</h3>
+                            <a href="explore.html" class="view_all">View All </a>
+                        </div>
+                    </div>
+                    <div class="col-12 p-2">
+                        <div class="categories_grid">
+                            <a href="explore.html" class="category_card">
+                                <div class="img">
+                                    <img src="assets/images/c1.jpg" alt="">
+                                </div>
+                                <div class="overlay">
+                                    <h6>Engineer</h6>
+                                </div>
+                            </a>
+                            <a href="explore.html" class="category_card">
+                                <div class="img">
+                                    <img src="assets/images/c2.jpg" alt="">
+                                </div>
+                                <div class="overlay">
+                                    <h6>Baby Sitter</h6>
+                                </div>
+                            </a>
+                            <a href="explore.html" class="category_card">
+                                <div class="img">
+                                    <img src="assets/images/c3.jpg" alt="">
+                                </div>
+                                <div class="overlay">
+                                    <h6>Farmer</h6>
+                                </div>
+                            </a>
+                            <a href="explore.html" class="category_card">
+                                <div class="img">
+                                    <img src="assets/images/c4.jpg" alt="">
+                                </div>
+                                <div class="overlay">
+                                    <h6>Technician </h6>
+                                </div>
+                            </a>
+                            <a href="explore.html" class="category_card">
+                                <div class="img">
+                                    <img src="assets/images/c5.jpg" alt="">
+                                </div>
+                                <div class="overlay">
+                                    <h6>Painter</h6>
+                                </div>
+                            </a>
+                            <a href="explore.html" class="category_card">
+                                <div class="img">
+                                    <img src="assets/images/c6.jpg" alt="">
+                                </div>
+                                <div class="overlay">
+                                    <h6>Male teacher</h6>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="latest_cvs">
+            <div class="container">
+                <div class="row m-0">
+                    <div class="col-12 p-2">
+                        <div class="sec_title">
+                            <h3>Latest Resumes</h3>
+                            <a href="explore.html" class="view_all">View All </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-7.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Mahmoud Elkomy</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-8.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Hassan Ibrahim</h6>
+                                <div class="title_age">
+                                    <span>Project Manager</span>
+                                    <span>34 years old</span>
+                                </div>
+                                <div class="label">
+                                    <img src="assets/images/no4.png" alt="">
+                                    <h6>Rawafed Recruitment Company</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-12.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Mahmoud Elkomy</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-5.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Hala Hassan</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-10.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Hala Hassan</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-9.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Hala Hassan</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                                <div class="label">
+                                    <img src="assets/images/no4.png" alt="">
+                                    <h6>Platinum Company</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer>
