--- a/account-type.html
+++ b/account-type.html
@@ -30,7 +30,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="index.html">Explore</a>
+                    <a href="explore.html">Explore</a>
                 </li>
                 <li>
                     <a href="index.html">About Us</a>
@@ -135,7 +135,7 @@
     <!-- main wrapper -->
     <main>
         <section class="auth_section">
-            <div class="container">
+            <div class="container p-0">
                 <div class="row m-0 justify-content-center">
                     <div class="col-lg-7 col-12 p-2">
                         <div class="auth_form">
@@ -143,7 +143,7 @@
                                 <h4>Account Type</h4>
                                 <p>select your team size</p>
                             </div>
-                            <form action="individual-signup.html">
+                            <form action="company-signup.html">
                                 <div class="row m-0 mb-4">
                                     <div class="col-lg-6 col-12 p-2">
                                         <label for="individual" class="select_type">
