--- a/individual-signup.html
+++ b/individual-signup.html
@@ -30,7 +30,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="index.html">Explore</a>
+                    <a href="explore.html">Explore</a>
                 </li>
                 <li>
                     <a href="index.html">About Us</a>
@@ -135,7 +135,7 @@
     <!-- main wrapper -->
     <main>
         <section class="auth_section">
-            <div class="container">
+            <div class="container p-0">
                 <div class="row m-0 justify-content-center">
                     <div class="col-lg-7 col-12 p-2">
                         <div class="auth_form">
@@ -149,7 +149,7 @@
                                         <div class="image_change">
                                             <div class="image_upload">
                                                 <img src="assets/images/avatar.svg" alt="" id="uploadedImage">
-                                                <input type="file" name="file" id="img-upload" >
+                                                <input type="file" name="file" id="img-upload">
                                                 <label for="img-upload">
                                                     <i class="fa-light fa-plus"></i>
                                                 </label>
@@ -202,7 +202,7 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/app.js"></script>
     <script>
-      
+
         let inputImg = document.getElementById("img-upload");
         let uploadedImage = document.getElementById("uploadedImage");
         inputImg.addEventListener("change", () => {
