--- a/otp.html
+++ b/otp.html
@@ -30,7 +30,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="index.html">Explore</a>
+                    <a href="explore.html">Explore</a>
                 </li>
                 <li>
                     <a href="index.html">About Us</a>
