--- a/index.html
+++ b/index.html
@@ -133,13 +133,35 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="create_resume">
+            <div class="container p-0">
+                <div class="row m-0">
+                    <div class="col-12 p-2">
+                        <a href="create-resume.html" class="wrapper">
+                            <div class="thumb"></div>
+                            <div class="content">
+                                <div>
+                                    <h1>Easily get job offers</h1>
+                                    <p>
+                                        Create your personal resume now and get job offers.
+                                    </p>
+                                </div>
+                                <div class="avatar">
+                                    <img src="assets/images/doc 1.svg" alt="">
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="companies">
             <div class="container">
                 <div class="row">
                     <div class="col-12 p-2">
                         <div class="sec_title">
                             <h3>Recruitment Companies</h3>
-                            <a href="explore.html" class="view_all">View All </a>
+                            <a href="companies.html" class="view_all">View All </a>
                         </div>
                     </div>
                     <div class="col-12 p-2">
