--- a/create-resume.html
+++ b/create-resume.html
@@ -511,7 +511,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="actions">
-                                                        <button class="edit" data-bs-toggle="modal" data-bs-target="#addActivity>
+                                                        <button class="edit" data-bs-toggle="modal" data-bs-target="#addActivity">
                                                             <i class="fa-sharp fa-light fa-pen-to-square"></i>
                                                         </button>
                                                         <button class="delete">
@@ -535,7 +535,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="actions">
-                                                        <button class="edit" data-bs-toggle="modal" data-bs-target="#addActivity>
+                                                        <button class="edit" data-bs-toggle="modal" data-bs-target="#addActivity">
                                                             <i class="fa-sharp fa-light fa-pen-to-square"></i>
                                                         </button>
                                                         <button class="delete">
