--- a/create-resume.html
+++ b/create-resume.html
@@ -511,7 +511,8 @@
                                                         </div>
                                                     </div>
                                                     <div class="actions">
-                                                        <button class="edit" data-bs-toggle="modal" data-bs-target="#addActivity">
+                                                        <button class="edit" data-bs-toggle="modal"
+                                                            data-bs-target="#addActivity">
                                                             <i class="fa-sharp fa-light fa-pen-to-square"></i>
                                                         </button>
                                                         <button class="delete">
@@ -535,7 +536,8 @@
                                                         </div>
                                                     </div>
                                                     <div class="actions">
-                                                        <button class="edit" data-bs-toggle="modal" data-bs-target="#addActivity">
+                                                        <button class="edit" data-bs-toggle="modal"
+                                                            data-bs-target="#addActivity">
                                                             <i class="fa-sharp fa-light fa-pen-to-square"></i>
                                                         </button>
                                                         <button class="delete">
@@ -547,9 +549,83 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- skills -->
                                 <div class="tab-pane fade" id="pills-skills" role="tabpanel"
                                     aria-labelledby="pills-skills-tab">
-
+                                    <div class="card_form mb-3">
+                                        <div class="row m-0">
+                                            <div class="col-12 p-2 d-flex justify-content-between align-items-center">
+                                                <h5 class="m-0">What skills, tools, technologies and fields of expertise
+                                                    do you have?</h5>
+                                                <a class="add_btn" data-bs-toggle="modal" data-bs-target="#addActivity">
+                                                    Add
+                                                </a>
+                                            </div>
+                                            <div class="col-12 p-2">
+                                                <div class="skills_card">
+                                                    <div class="name_actions">
+                                                        <h6>UI/UX</h6>
+                                                        <div class="actions">
+                                                            <button class="edit" data-bs-toggle="modal"
+                                                                data-bs-target="#addActivity">
+                                                                <i class="fa-sharp fa-light fa-pen-to-square"></i>
+                                                            </button>
+                                                            <button class="delete">
+                                                                <i class="fa-regular fa-trash-can"></i>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                    <div class="d-flex gap-5">
+                                                        <div>
+                                                            <p>Proficiency</p>
+                                                            <div class="stars">
+                                                                <ul>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </div>
+                                                        <div>
+                                                            <p>Interest</p>
+                                                            <div class="stars">
+                                                                <ul>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                    <li>
+                                                                        <i class="fa-solid fa-star"></i>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <p>3-5 years of Experience</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="tab-pane fade" id="pills-education" role="tabpanel"
                                     aria-labelledby="pills-education-tab">
