--- a/companies.html
+++ b/companies.html
@@ -35,7 +35,7 @@
                     <a href="index.html">About Us</a>
                 </li>
                 <li>
-                    <a href="index.html">Contact Us</a>
+                     <a href="contact-us.html">Contact Us</a>
                 </li>
             </ul>
             <ul class="util">
@@ -241,7 +241,149 @@
     </main>
     <!-- footer -->
     <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-12 p-2">
+                    <div class="about_company">
+                        <div class="logo">
+                            <a href="index.html">
+                                <img src="assets/images/logo.svg" alt="logo">
+                            </a>
+                        </div>
+                        <div class="text">
+                            <p>
+                                Jobsin saudi is the heart of the design community and the best resource to discover and
+                                connect with designers and jobs worldwide.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12 p-2">
+                    <div class="col">
+                        <h3>Company</h3>
+                        <ul>
+                            <li>
+                                <a href="index.html">
+                                    <span><i class="fa-light fa-arrow-up-right-from-square"></i></span> About us
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                    FAQs
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                    Contact us
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                    Terms & Conditions
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                    Privacy & Policy
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12 p-2">
+                    <div class="col">
+                        <h3>popular categories</h3>
+                        <ul>
+                            <li>
+                                <a href="index.html">
+                                    <span><i class="fa-light fa-arrow-up-right-from-square"></i></span> Engineer
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                    baby sitter
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                    Carpenter
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                    Cook
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                    Mechanic
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-12 p-2">
+                    <div class="col">
+                        <h3>Download App</h3>
+                        <ul class="download-app">
+                            <li>
+                                <a href="#">
+                                    <div class="icon">
+                                        <i class="fa-brands fa-apple"></i>
+                                    </div>
+                                    <div class="text">
+                                        <p>
+                                            App Store
+                                        </p>
+                                    </div>
 
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="icon">
+                                        <i class="fa-brands fa-google-play"></i>
+                                    </div>
+                                    <div class="text">
+                                        <p>
+                                            Google Play
+                                        </p>
+                                    </div>
+
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12 p-2">
+                    <div class="copy_rights">
+                        <p>Copyright &copy; 2021. All Rights Reserved to <a href="index.html">Jobsin saudai</a></p>
+                        <div class="social_media">
+                            <ul>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                <li>
+                                    <a href="#">
+                                        <svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+                                            xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="14" x="0"
+                                            y="0" viewBox="0 0 1226.37 1226.37"
+                                            style="enable-background:new 0 0 512 512" xml:space="preserve" class="">
+                                            <g>
+                                                <path
+                                                    d="M727.348 519.284 1174.075 0h-105.86L680.322 450.887 370.513 0H13.185l468.492 681.821L13.185 1226.37h105.866l409.625-476.152 327.181 476.152h357.328L727.322 519.284zM582.35 687.828l-47.468-67.894-377.686-540.24H319.8l304.797 435.991 47.468 67.894 396.2 566.721H905.661L582.35 687.854z"
+                                                    fill="#aaaaaa" opacity="1" data-original="#aaaaaa" class=""></path>
+                                            </g>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- js -->
     <script src="assets/js/main.js"></script>
