--- a/contact-us.html
+++ b/contact-us.html
@@ -134,82 +134,98 @@
     </header>
     <!-- main wrapper -->
     <main>
-        <section class="auth_section">
+        <section class="contact">
             <div class="container">
-                <div class="row m-0 justify-content-center">
-                    <div class="col-lg-8 col-12 p-2">
-                        <div class="auth_form">
-                            <div class="title">
-                                <h4>Welcome Back</h4>
-                                <p>Please enter your mobile number or email to complete the login process.</p>
-                            </div>
-                            <form action="otp.html">
-                                <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                                    <li class="nav-item" role="presentation">
-                                        <button class="nav-link active" id="pills-phone-tab" data-bs-toggle="pill"
-                                            data-bs-target="#pills-phone" type="button" role="tab"
-                                            aria-controls="pills-phone" aria-selected="true">
-                                            Phone Number
-                                        </button>
-                                    </li>
-                                    <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="pills-email-tab" data-bs-toggle="pill"
-                                            data-bs-target="#pills-email" type="button" role="tab"
-                                            aria-controls="pills-email" aria-selected="false">
-                                            Email Address
-                                        </button>
-                                    </li>
-                                </ul>
-                                <div class="tab-content" id="pills-tabContent">
-                                    <div class="tab-pane fade show active" id="pills-phone" role="tabpanel"
-                                        aria-labelledby="pills-phone-tab">
-                                        <div class="d-flex gap-2">
-                                            <div class="input_field">
-                                                <div class="country_code_select">
-                                                    <label for="country" class="h">Country</label>
-                                                    <input type="text" id="phoneField1" name="countryPicker"
-                                                        class="country-picker">
-                                                </div>
-                                            </div>
-                                            <div class="input_field w-100">
-                                                <label for="phone"> Phone Number</label>
-                                                <input type="tel" id="phone" name="phone" onfocus="highlight(this)"
-                                                    onblur="unhighlight(this)">
-                                            </div>
+                <div class="row">
+                    <div class="col-lg-6 order-lg-1 order-2">
+                        <form action="" class="auth_form">
+                            <div class="form">
+                                <div class="row m-0">
+                                    <h4>GET IN TOUCH</h4>
+                                    <div class="col-12 p-2">
+                                        <div class="input_field w-100">
+                                            <label for="name"> Name </label>
+                                            <input type="text" id="name" name="name" onfocus="highlight(this)"
+                                                onblur="unhighlight(this)">
                                         </div>
                                     </div>
-                                    <div class="tab-pane fade" id="pills-email" role="tabpanel"
-                                        aria-labelledby="pills-email-tab">
-                                        <div class="input_field">
-                                            <label for="email">Email Address</label>
+                                    <div class="col-lg-6 col-12 p-2">
+                                        <div class="input_field w-100">
+                                            <label for="email"> Email </label>
                                             <input type="email" id="email" name="email" onfocus="highlight(this)"
                                                 onblur="unhighlight(this)">
                                         </div>
                                     </div>
+                                    <div class="col-lg-6 col-12 p-2">
+                                        <div class="input_field w-100">
+                                            <label for="subject"> Subject </label>
+                                            <input type="text" id="subject" name="subject" onfocus="highlight(this)"
+                                                onblur="unhighlight(this)">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 p-2">
+                                        <div class="input_field w-100">
+                                            <label for="message"> Message </label>
+                                            <textarea name="message" id="message" onfocus="highlight(this)"
+                                                onblur="unhighlight(this)"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 p-2 d-flex justify-content-end">
+                                        <button class="send_btn">Send</button>
+                                    </div>
                                 </div>
-                                <p class="continue">
-                                    By continuing, you agree to the
-                                    <a href="terms-conditions.html">terms of use</a>
-                                    and
-                                    <a href="privacy-policy.html">privacy policy</a>
-                                    of the application
-                                </p>
-                                <button class="save_btn">Login</button>
-                                <div class="orSignwith">
-                                    <span>or sign with</span>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-lg-6 order-lg-2 order-1">
+                        <div class="animatedMap">
+                            <div class="worldMap">
+                                <div class="earth"></div>
+                                <div class="orbic">
+                                    <svg viewBox="0 0 500 500" width="0" height="0">
+                                        <g id="orbic_path">
+                                            <ellipse cx="250" cy="250" rx="240" ry="100"
+                                                transform="rotate(-10,250,250)">
+                                            </ellipse>
+                                            <path d="M230,192Q300,25 375,146"></path>
+                                            <path d="M375,146Q450,175 410,301"></path>
+                                            <path d="M40,234Q300,125 410,301"></path>
+                                            <path d="M410,301Q260,165 125,354"></path>
+                                            <path d="M125,354Q150,220 230,192"></path>
+                                            <path d="M40,234Q130,200 125,354"></path>
+                                        </g>
+                                        <g id="orbic_dots">
+                                            <defs>
+                                                <circle id="orbic_dot" cx="0" cy="0" r="6"></circle>
+                                            </defs>
+                                            <use id="orbic_dot1" xlink:href="#orbic_dot"></use>
+                                            <use id="orbic_dot2" xlink:href="#orbic_dot"></use>
+                                            <use id="orbic_dot3" xlink:href="#orbic_dot"></use>
+                                            <use id="orbic_dot4" xlink:href="#orbic_dot"></use>
+                                            <use id="orbic_dot5" xlink:href="#orbic_dot"></use>
+                                        </g>
+                                        <g id="orbic_users">
+                                            <image id="orbic_user1" xlink:href="assets/images/user1.webp" width="20%"
+                                                height="20%">
+                                            </image>
+                                            <image id="orbic_user2" xlink:href="assets/images/user2.webp" width="20%"
+                                                height="20%">
+                                            </image>
+                                            <image id="orbic_user3" xlink:href="assets/images/user3.webp" width="20%"
+                                                height="20%">
+                                            </image>
+                                            <image id="orbic_user4" xlink:href="assets/images/user4.webp" width="20%"
+                                                height="20%">
+                                            </image>
+                                            <image id="orbic_user5" xlink:href="assets/images/user5.webp" width="20%"
+                                                height="20%">
+                                            </image>
+                                        </g>
+                                    </svg>
                                 </div>
-                                <div class="platForms">
-                                    <a href="javascript:void(0)">
-                                        <img src="assets/images/google.svg" alt="google">
-                                        <p>Continue with Google </p>
-                                    </a>
-                                    <a href="javascript:void(0)">
-                                        <img src="assets/images/apple.svg" alt="">
-                                        <p>Continue with Apple </p>
-                                    </a>
-                                </div>
-                            </form>
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -365,13 +381,6 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/jquery.ccpicker.min.js"></script>
     <script src="assets/js/app.js"></script>
-    <script>
-        // country code picker
-        $(document).ready(function () {
-            $("#phoneField1").CcPicker();
-            $("#phoneField1").CcPicker("setCountryByCode", "sa");
-        });
-    </script>
 </body>
 
 </html>
